fixed logic error, minor styling changes, removed scrollbars

--- a/starter-code/style.css
+++ b/starter-code/style.css
@@ -3,13 +3,13 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+    overflow: hidden;
 }
 
 #message {
-    width: 100%;
     background-color: white;
     padding: 10px;
-    /*height: 3em;*/
+    margin: 10px;
 }
 
 h1,
